--- a/Stinger-Website/package.json
+++ b/Stinger-Website/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongodb": "^4.2.1"
+    "mongodb": "^4.2.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
