--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
